<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/NickName_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:text="@string/NickName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/PR_Number_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/PR_Number"
        android:hint="请输入手机号码" />

    <EditText
        android:id="@+id/PassWord_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
         android:text="@string/PassWord"
        android:hint="请设置您的登录密码" />

    <Button
        android:id="@+id/Singin_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/singin"
        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#00ff00" />

</LinearLayout>